--- a/back-end/views/index.ejs
+++ b/back-end/views/index.ejs
@@ -22,14 +22,14 @@
 	<div class="header">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-2">
-					<div class="main-logo animated fadeInDown">
+				<div class="col-lg-2 ">
+					<div class="main-logo ">
 						<a class="link__logo" href="#">
 							Smart Bets
 						</a>
 					</div>
 				</div>
-				<div class="col-lg-10 d-flex justify-content-end">
+				<div class="col-lg-10 d-flex justify-content-center ">
 					<div class="nav-menu animated fadeInRight">
 						<!-- <a href="/"><img alt="burger" class="img__burger" src="/images/menu.png"></a> -->
 						<ul class="menu d-flex animated fadeInRight">
@@ -97,25 +97,24 @@
 					</div>
 					<div class="sections-service">
 						<div class="section-service">
-							<p class="section__text"> Мы предоставляем грамотную аналитику и
-								расчет на все
-								спортивные события</p>
+							<p class="section__text">На нашем ресурсе мы предоставляем грамотную аналитику. Вы можете
+								быть уверенны в нашем профессионализме и идти вперед вместе с нами!</p>
 						</div>
 						<div class="section-service">
-							<p class="section__text"> У нас большой опыт в нашей сфере, более 9 лет в интернете
-								предоставляем аналитику</p>
+							<p class="section__text"> SmartBets- надежная инвестиция,которая даст результат с первых
+								ставок. У нас большой опыт в нашей сфере, более 9 лет в интернете.</p>
 						</div>
 						<div class="section-service">
-							<p class="section__text">Высокие кофициенты , очень большая вероятность проходимости
-								прогнозов 89%
+							<p class="section__text">Мы предоставляем верифицированную статистику,которую можно
+								проверить по
+								номеру ставки. Подробная инструкция по проверке читайте в описании!</p>
+						</div>
+						<div class="section-service">
+							<p class="section__text">У нас огромная команда специалистов,мы на свои прогнозы даем
+								максимально высокий процент проходимости прогнозов 89%.
 							</p>
 						</div>
-						<div class="section-service">
-							<p class="section__text">A new email service being developed by a group from MIT and CERN
-								promises to bring secure,
-								encrypted email to the masses and keep sensitive information away from prying eyes.
-								— Boston Herald</p>
-						</div>
+
 					</div>
 				</div>
 				<div class="col-lg-5 ml-auto">
@@ -190,17 +189,18 @@
 					<table>
 						<tr class="lines">
 							<th class="rows rows-bg ">
-								<div class="left-block"><i class="fa fa-superpowers" aria-hidden="true"></i></div>
+								<div class="left-block super-left-icon"><i class="fa fa-superpowers"
+										aria-hidden="true"></i></div>
 								<div class="right-block">
-									<h3 class="right__block-title super-title text-left">Супер Экспресс </h3>
-									<p class="right__block-price super-text text-left">11999 &#8381 </p>
-									<p class="right__block-text  super-text text-left">8 экспресс прогнозов</p>
-									<p class="right__block-text  super-text text-left">Проходимость 60 - 65%</p>
-									<p class="right__block-text  super-text text-left">Средний коэффициент 10 - 12</p>
-									<p class="right__block-text  super-text text-left">Отличная цена</p>
+									<h3 class="right__block-title super-title ">Супер Экспресс </h3>
+									<p class="right__block-price super-text ">11999 &#8381 </p>
+									<p class="right__block-text  super-text ">8 экспресс прогнозов</p>
+									<p class="right__block-text  super-text ">Проходимость 60 - 65%</p>
+									<p class="right__block-text  super-text ">Средний коэффициент 10 - 12</p>
+									<p class="right__block-text  super-text ">Отличная цена</p>
 								</div>
-								<div class="btn-buy"><a class="btn-pay btn-super-bet"
-										href="/card?price=1200&rate=Cупер%20Экспресс">Купить
+								<div class="btn-buy btn-super-block"><a class="btn-pay btn-super-bet"
+										href="/card?price=12000&rate=Cупер%20Экспресс">Купить
 										Прогноз</a>
 								</div>
 							</th>
@@ -292,22 +292,12 @@
 						<div class="basketball">
 							<p class="sport__name">Баскетбол</p>
 						</div>
-					</div>
-				</div>
-				<div class="row d-flex justify-content-center">
-					<div class="col-lg-4">
 						<div class=" football">
 							<p class="sport__name">Футбол</p>
 						</div>
-					</div>
-					<div class="col-lg-4">
 						<div class="hockey">
 							<p class="sport__name">Хокей</p>
 						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-12">
 						<div class=" other">
 							<p class="sport__name">Другие виды</p>
 						</div>
@@ -320,58 +310,54 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-2 align-self-center">
-					<div class="slider-left align-self-center"><i class="fa fa-arrow-left" aria-hidden="true"></i></div>
-				</div>
-				<div class="col-lg-8">
-					<div class="slider-wrap">
-						<div class="slider-rewiev">
-							<div class="slider-photo">
-								<img alt="user" class="img__user" src="/images/user.jpg">
-								<p class="slider__name">Егор</p>
-							</div>
-							<p class="slider__text">Я очень люблю спорт,но самостоятельно заработать с помощью ставок
-								мне было очень трудно я часто уходил в минус.Мне посоветовали хорошего каппера Игоря
-								Кравченка!Результат превзошел мои ожидания:доход за первый месяц получился не скромный
-								примерно 110% и это при том,что другие капперы присылали провальные прогнозы и я терпел
-								не мало неудач.Планирую и дальше работать со Smartbets.</p>
+			</div>
+			<div class="col-lg-12 d-flex justify-content-center">
+				<div class="slider-left align-self-center"><i class="fa fa-arrow-left" aria-hidden="true"></i></div>
+				<div class="slider-wrap">
+					<div class="slider-rewiev">
+						<div class="slider-photo">
+							<img alt="user" class="img__user" src="/images/user.jpg">
+							<p class="slider__name">Егор</p>
 						</div>
-						<div class="slider-rewiev">
-							<div class="slider-photo">
-								<img alt="user" class="img__user" src="/images/user3.jpg">
-								<p class="slider__name">Владислав</p>
-							</div>
-							<p class="slider__text">Довольно давно покупаю подписку в данной конторе, услугами пользуюсь
-								года два. Ни чего плохого не вижу в том, что люди обращаються к специалистом в данной
-								отрасли. Сейчас я выплачиваю банку третий кредит, мои друзья и знакомые также
-								выплачивают кредит и все остались довольны. Бывало не проходил прогноз, но после всегда
-								повзло выигрывать в данный момент в плюсе,с выйгрыша открыл небольшое кафе.</p>
+						<p class="slider__text">Я очень люблю спорт,но самостоятельно заработать с помощью ставок
+							мне было очень трудно я часто уходил в минус.Мне посоветовали хорошего каппера Игоря
+							Кравченка!Результат превзошел мои ожидания:доход за первый месяц получился не скромный
+							примерно 110% и это при том,что другие капперы присылали провальные прогнозы и я терпел
+							не мало неудач.Планирую и дальше работать со Smartbets.</p>
+					</div>
+					<div class="slider-rewiev">
+						<div class="slider-photo">
+							<img alt="user" class="img__user" src="/images/user3.jpg">
+							<p class="slider__name">Владислав</p>
 						</div>
-						<div class="slider-rewiev">
-							<div class="slider-photo">
-								<img alt="user" class="img__user" src="/images/user4.jpg">
-								<p class="slider__name">Карен</p>
-							</div>
-							<p class="slider__text">Очень трудно самому держать свой банк в плюсе.Победы чередовались с
-								проигрошами,но после того как подписался на подписку подписку банк начал немного
-								расти,но справедливости ради ставлю небольшие сумы.Ну а так дело каждого кто хочет сам
-								ставит,а кто пользуеться услугами компании!</p>
+						<p class="slider__text">Довольно давно покупаю подписку в данной конторе, услугами пользуюсь
+							года два. Ни чего плохого не вижу в том, что люди обращаються к специалистом в данной
+							отрасли. Сейчас я выплачиваю банку третий кредит, мои друзья и знакомые также
+							выплачивают кредит и все остались довольны. Бывало не проходил прогноз, но после всегда
+							повзло выигрывать в данный момент в плюсе,с выйгрыша открыл небольшое кафе.</p>
+					</div>
+					<div class="slider-rewiev">
+						<div class="slider-photo">
+							<img alt="user" class="img__user" src="/images/user4.jpg">
+							<p class="slider__name">Карен</p>
 						</div>
-						<div class="slider-rewiev">
-							<div class="slider-photo">
-								<img alt="user" class="img__user" src="/images/user2.jpg">
-								<p class="slider__name">Женя</p>
-							</div>
-							<p class="slider__text">Ставил всегда исключительно по фану и в основном на события которые
-								популярные и небольшие сумы,но я хотел зарабатывать больше и с минимальным риском!Мне
-								один из друзей посоветовал команду капперов и теперь для меня это хороший пассивный
-								доход!</p>
+						<p class="slider__text">Очень трудно самому держать свой банк в плюсе.Победы чередовались с
+							проигрошами,но после того как подписался на подписку подписку банк начал немного
+							расти,но справедливости ради ставлю небольшие сумы.Ну а так дело каждого кто хочет сам
+							ставит,а кто пользуеться услугами компании!</p>
+					</div>
+					<div class="slider-rewiev">
+						<div class="slider-photo">
+							<img alt="user" class="img__user" src="/images/user2.jpg">
+							<p class="slider__name">Женя</p>
 						</div>
+						<p class="slider__text">Ставил всегда исключительно по фану и в основном на события которые
+							популярные и небольшие сумы,но я хотел зарабатывать больше и с минимальным риском!Мне
+							один из друзей посоветовал команду капперов и теперь для меня это хороший пассивный
+							доход!</p>
 					</div>
 				</div>
-				<div class="col-lg-2 align-self-center">
-					<div class="slider-right align-self-center"><i class="fa fa-arrow-right" aria-hidden="true"></i>
-					</div>
+				<div class="slider-right align-self-center"><i class="fa fa-arrow-right" aria-hidden="true"></i>
 				</div>
 			</div>
 			<div class="row">
@@ -382,6 +368,8 @@
 				</div>
 			</div>
 		</div>
+
+	</div>
 	</div>
 
 	<!-- contacts -->
@@ -429,7 +417,7 @@
 					<div class="map d-flex justify-content-center">
 						<iframe
 							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2543.659581892104!2d30.490366415729262!3d50.39154417946734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c8c500ec7819%3A0x8dfbf7f3d1c97221!2z0LLRg9C70LjRhtGPINCc0LjRhdCw0LnQu9CwINCb0L7QvNC-0L3QvtGB0L7QstCwLCAyMCwg0JrQuNGX0LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1569071145981!5m2!1sru!2sua"
-							width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+							width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 					</div>
 				</div>
 			</div>
@@ -542,30 +530,33 @@
 							<div class="modal-left">
 								<div class="row">
 									<div class="col-lg-12">
-										<button aria-label="Close" class="close" data-window="#registr"
+										<button aria-label="Close" class="close btn-close" data-window="#registr"
 											type="button"><span aria-hidden="true">&times;</span></button>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-lg-12 text-center">
-										<p class="form-title">Регистрация</p>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-lg-12">
+										<p class="form-title text-center">Регистрация</p>
 										<form class=" form-registr text-center d-flex flex-column" id="form-reg"
 											name="form-reg">
-											<label for="input__login"><input class="input__login" name="name"
-													placeholder="Логин" type="name"></label> <label
-												for="input__pass"><input class="input__pass" name="pass"
-													placeholder="Пароль" type="password"></label> <label
-												for="input__email"><input class="input__email" name="email"
-													placeholder="Email" type="email"></label> <label
-												for="input__checkbox text-center"><input class="input__checkbox"
-													name="checkbox" type="checkbox"></label>
-											<p class="read__rules"><label for="input__checkbox text-center">Я принимаю
-													<span class="agree__rules">Правила сайта</span></label></p><button
-												class="btn btn-primary btn-reg disabled" disabled>Регистрация</button>
+
+											<label for="input__login">
+												<input class="input__login" name="login" placeholder="логин"
+													type="login">
+											</label>
+											<label for="input__email">
+												<input class="input__email" name="email" placeholder="Email"
+													type="email">
+											</label>
+
+											<label for="input__pass"><input class="input__pass" name="pass"
+													placeholder="Пароль" type="password">
+											</label>
+
+											<label for="input__checkbox" class="checkbox">
+												<input id="input__checkbox" name="checkbox" type="checkbox">
+												<span class="fake-checkbox"></span>
+												<span class="read__rules"> Я принимаю правила сайта</span>
+											</label>
+											<span class="agree__rules">читать Правила</span>
+											<button class="btn btn-primary btn-reg disabled"
+												disabled>Регистрация</button>
 										</form>
 									</div>
 								</div>
@@ -576,7 +567,7 @@
 										<a href="#" id="top" name="top">Договор Оферты</a>
 										<p>1. Термины и определения</p>
 										<p>Оферта – настоящий документ «Оферта на оказание консультационных услуг»,
-											опубликованный в сети Интернет по адресу: http://smartbets.ru</p>
+											опубликованный в сети Интернет по адресу: http://smartbets.com.ua</p>
 										<p>Акцепт Оферты – полное безоговорочное принятие Оферты путём осуществления
 											действий, указанных в разделе 6 Оферты. Акцептом Оферты заключается Договор.
 										</p>
@@ -586,7 +577,7 @@
 											Заказчиком услуг Исполнителя по заключенному Договору.</p>
 										<p>Прейскурант цен – действующий перечень платных услуг, оказываемых
 											Исполнителем с ценами, публикуемый в сети Интернет по адресу:
-											http://smartbets.ru</p>
+											http://smartbets.com.ua</p>
 										<p>2. Предмет Договора</p>
 										<p>1. Предметом Договора является возмездное оказание Исполнителем Заказчику
 											консультативных услуг в виде прогнозов результатов спортивных событий на
@@ -605,7 +596,8 @@
 										<p>Если в какой-то с дней нет прогноза - мы добавляем +1 день к подписке всем
 											пользователям.</p>
 										<p>4. Совершая Акцепт настоящей Оферты, Заказчик подтверждает, что ознакомился с
-											положением о рисках, размещенным по ссылке http://smartbets.ru/dogovor.php,
+											положением о рисках, размещенным по ссылке
+											http://smartbets.com.ua/dogovor.php,
 											и согласен с тем, что Исполнитель не несёт ответственности за убытки
 											Заказчика и никаким образом их не компенсирует. Если случается такое, что по
 											итогам подписки заказчик остается в минусе, мы добавляем пару дней к
@@ -617,11 +609,13 @@
 											о публично, что он пользуется/пользовался платными услугами.</p>
 										<p>4. Стоимость услуг и порядок получения прогнозов</p>
 										<p>1. Стоимость услуг определяется в соответствии с ценами, указанными в
-											Прейскуранте цен, размещаемом в сети Интернет по адресу: http://smartbets.ru
+											Прейскуранте цен, размещаемом в сети Интернет по адресу:
+											http://smartbets.com.ua
 										</p>
 										<p>2. Оказание услуг осуществляется в полном объеме при условии их 100% (сто
 											процентов) оплаты их Заказчиком. Оплата Заказчиком услуг осуществляется на
-											сайте http://smartbets.ru при помощи системы приема электронных платежей.
+											сайте http://smartbets.com.ua при помощи системы приема электронных
+											платежей.
 										</p>
 										<p>3. При покупке подписки на любой срок заказчик автоматически вступает в
 											закрытую группу и с момента оплаты начинает получать прогнозы.</p>
@@ -657,7 +651,8 @@
 											законодательством Great Britain.</p>
 										<p>8. Срок действия и изменение условий Оферты</p>
 										<p>1. Оферта вступает в силу с момента размещения в сети Интернет по адресу
-											http://smartbets.ru и действует до момента отзыва Оферты Исполнителем.</p>
+											http://smartbets.com.ua и действует до момента отзыва Оферты Исполнителем.
+										</p>
 										<p>2. Исполнитель оставляет за собой право внести изменения в Оферту или
 											отозвать Оферту в любой момент по своему усмотрению. В случае внесения
 											Исполнителем изменений в Оферту, такие изменения вступают в силу с момента
@@ -711,27 +706,24 @@
 					<div class="modal-login modal-stop">
 						<div class="row">
 							<div class="col-lg-12">
-								<button aria-label="Close" class="close" data-window="#registr" type="button"><span
-										aria-hidden="true">&times;</span></button>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-lg-12 text-center">
-								<p class="form-title">Вход</p>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-lg-12">
+								<button aria-label="Close" class="close btn-close" data-window="#registr"
+									type="button"><span aria-hidden="true">&times;</span></button>
+								<p class="form-title text-center">Вход</p>
 								<form class="form-login text-center d-flex flex-column" id="form-login"
 									name="form-login">
-									<label for="login__email"><input class="login__email" name="email-login"
-											placeholder="Email" type="email" value=""></label> <label
-										for="login__pass"><input class="login__pass" name="-login-pass"
-											placeholder="Пароль" type="password" value=""></label>
+
+									<label for="input__login">
+										<input class="login__name" name="login" placeholder="Логин" type="login">
+									</label>
+									<label for="login__pass">
+										<input class="login__pass" name="-login-pass" placeholder="Пароль"
+											type="password" value=""></label>
 									<div class="col-lg-12 text-center">
 										<button class="btn btn-primary btn-login">Войти</button>
 									</div>
+									<a href="#" class="forget-pass text-center">Забыли пароль?</a>
 								</form>
+
 							</div>
 						</div>
 					</div>
