addmada adaptive second page

--- a/back-end/views/buy.ejs
+++ b/back-end/views/buy.ejs
@@ -64,10 +64,7 @@
 								получать матчи тарифных планов “Старт” и “Плюс”.Профит, при усредненных показателях,
 								составит +7100% или +7100$ .Следуя всем нашим рекомендациям, в ближайшее время вы
 								сможете выйти на стабильную прибыль в 100 000 - 200 000 рублей в месяц.</p>
-						</div><svg viewbox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-							<path d="M 18 32.34 l -8.34 -8.34 -2.83 2.83 11.17 11.17 24 -24 -2.83 -2.83 z"
-								fill="transparent" stroke="#3da35a"></path>
-						</svg>
+						</div>
 						<div class="col-lg-4">
 							<form class="form-subscription d-flex flex-column align-items-center">
 								<p class="sub__price">25 500 &#8381</p>
@@ -188,19 +185,13 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<p class="footer__text">Наши партнеры</p>
-				</div>
-				<div class="partners d-flex justify-content-center">
-					<div class="row">
-						<div class="col-lg-3"><img alt="partner"
-								src="https://s13.postimg.cc/m9c0wcpxz/2017-10-23-logo-refresh.png"></div>
-						<div class="col-lg-3"><img alt="partner"
-								src="https://i.postimg.cc/m27ZtrxQ/blokt-logo-no-tagline-light-bg-1200x250px1.png">
-						</div>
-						<div class="col-lg-3"><img alt="partner"
-								src="https://i.postimg.cc/Kz911f3c/56766135-running-SEO-logo-01.png"></div>
-						<div class="col-lg-3"><img alt="partner"
-								src="https://s13.postimg.cc/hcpyykzbr/stillio-as-logo-1000-green.png"></div>
+					<div class="logo-partners d-flex justify-content-center d-flex justify-content-beetwen">
+						<img alt="partner" src="/images/2017-10-23-logo-refresh.png">
+						<img alt="partner" src="/images/logo-temp.png">
+						<img alt="partner" src="/images/blokt-logo-no-tagline-light-bg-1200x250px1.png">
+						<img alt="partner" src="/images/stillio-as-logo-1000-green.png">
 					</div>
+
 				</div>
 			</div>
 		</div>
