--- a/back-end/public/css/style2.css
+++ b/back-end/public/css/style2.css
@@ -6,18 +6,14 @@ ul, li {
 	display: block;
 }
 
-body {
-	background-color: #fff;
-}
-
 .container {
 	font-family: 'PT Sans', sans-serif;
-	
 }
 
 h1,h2,h3 {
 	color: #959393;
-	margin-top: 20px;
+	margin-top: 40px;
+	font-weight: bold;
 }
 
 
@@ -25,34 +21,16 @@ h1,h2,h3 {
 .header-slider, .header, .content, .our-team, .rewiev, .contacts, .ask, footer {
 	background-color: #fff;
 }
+
 .header .container {
 	background-color: #fff;
 }
-.header {
-	background-color: #fff;
-	position: fixed;
-	z-index: 999;
-	width: 100%;
-}
-.burger-img {
-	width: 16px;
-}
-.menu {
 
-	list-style: none;
-
-}
 .nav-menu .menu .menu__item a {
 	width: 20px;
-	height: 23px;
 	margin-left: 20px;
-	
 }
 
-.login-items {
-	margin-right: 30px;
-	list-style: none;
-}
 .menu__item a, .login-items {
 	color: #959393;
 	font-size: 16px;
@@ -60,69 +38,56 @@ h1,h2,h3 {
 	text-decoration: none;
 	font-weight: bolder;
 	margin-top: 20px;
-
 }
 
 .login {
-	margin-top: 60px;
+	margin-top: 10px;
 	cursor: pointer;
 }
+
 .login a {
 	color: #fff;
 	font-size: 16px;
 }
+
 .login__app {
 	padding: 10px 15px;
 	border-radius: 21px;
 	background-color: #267df4;
 	text-align: center;
-	position: absolute;
-	bottom: 8px;
-	right: 38px;
 }
+
 .login__app i {
 	margin-right: 10px;
 	font-size: 20px;
 }
+
 .main-logo a .name-company {
 	font-weight: bolder;
 	text-decoration: none;
 	font-size: 22px;
 	margin: 0;
 }
+
 .main-logo a {
 	text-decoration: none;
 }
-/* ////////// */
-
-.bg-2 .container {
-	background-image: url('https://images.unsplash.com/photo-1552874031-b9c207ed9292?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60');
-}
-/* //////////// */
 
 .main .container {
 	background: #fff;
 	padding: 30px 0;
 }
-.subscription-title, .about-title, .section__title, .calc-title {
-	font-weight: bolder;
-	font-size: 30px;
-	margin-top: 30px;
-	font-weight: bolder;
-}
+
 .subscription {
 	background-color: #fff;
-	width: auto;
-	height: 385px;
-	margin: 0 auto;
 	padding: 100px 0;
-	font-size: 18px;
 	color: #000;
 	background-image: url('/images/zlatan-ibrahimovic-png-16.png');
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: 0% 90%;
 }
+
 .subscription-text {
 	width: auto;
 	border-radius: 5px;
@@ -151,9 +116,7 @@ h1,h2,h3 {
 	outline: none;
 	margin-top: 10px;
 	font-size: 14px;
-
 }
-
 
 .sub__price {
 	font-size: 22px;
@@ -163,6 +126,10 @@ h1,h2,h3 {
 
 .input__sub{
 	display: none;
+}
+
+.input__text{
+   color: #959393;
 }
 
 .fake-input {
@@ -186,18 +153,13 @@ h1,h2,h3 {
 	transform: translate(-50%,-50%);
 	opacity: 0;
 	display: block;
-
 }
 
 .input__sub:checked+ .fake-input::before{
 	opacity: 1;
 }
 
-
-
-
 /* about */
-
 
 .about-text {
 	width: 600px;
@@ -206,10 +168,10 @@ h1,h2,h3 {
 	margin: 0 auto;
 }
 
-
 .section-about{
      margin-top: 50px;
 }
+
 .section__title {
 	font-size: 26px;
 	color: #959393;
@@ -217,13 +179,11 @@ h1,h2,h3 {
 	width: 500px;
 }
 
-
 .item {
     width: 300px;
 	height: 180px;
 	background-color: #1359c8;
 	margin: 10px;
-	
 }
 
 .item__number {
@@ -254,14 +214,12 @@ h1,h2,h3 {
     -webkit-background-size: cover;
 }
 
-
 .item-2:hover {
 	background-image:linear-gradient(rgba(1,1,1,.7), rgba(1,1,1,.7)), url('/images/bank.jpg');
 	background-size: cover;
 	background-position: center;
     -webkit-background-size: cover;
 }
-
 
 .item-3:hover {
 	background-image:linear-gradient(rgba(1,1,1,.7), rgba(1,1,1,.7)), url('/images/kof.jpg');
@@ -278,9 +236,7 @@ h1,h2,h3 {
     -webkit-background-size: cover;
 }
 
-
 /* /////кальк */
-
 
 .calc-money {
 	background-image: url('https://clipart.info/images/ccovers/1510437647Alexandre-Lacazette-Arsenal-2017-18-Png.png');
@@ -289,7 +245,6 @@ h1,h2,h3 {
 	color: #000;
 	background-position: 53%;
 }
-
 
 .calc-title {
 	margin-top: 100px;
@@ -315,11 +270,10 @@ h1,h2,h3 {
 	color: #959393;
 	border: 1px solid silver;
 	margin-top: 10px;
-	
 }
+
 .form-calc {
 	margin-top: 70px;
-	
 }
 
 .rate-bets ,.tarif {
@@ -330,213 +284,256 @@ h1,h2,h3 {
     height: 40px;
     line-height: 40px;
     border-radius: 5px;
-	font-weight: bold;
-
 }
-
-
 
 .profit__text, .profit__rate, .profit__money {
 	color: #267df4;
 	font-size: 34px;
 }
 
-/* инфо */
-
-
 /* футер */
 
 .footer__text {
 	font-size: 20px;
-	color: #fff;
+	color:#959393;
+	font-weight: bold;
+	margin-top: 40px;
 }
 footer img {
-	width: 60px;
+	width: 85px;
+	height: 40px;
 	margin: 10px;
 }
 .partners {
 	margin: 0 auto;
 }
+
+/* adaptive */
+
 @media screen and (max-width:768px) {
+
 	.nav-menu .menu .menu__item a {
 		margin: 10px;
 	}
+
 	.main-logo a .name-company {
 		width: auto;
 	}
-	.login__app {
-		margin: 0 200px;
-		right: 88px;
+
+	.menu {
+		margin: 15px auto;
 	}
-	.paralax .container {
-		width: 100%;
-		height: 35vh;
-		background-position: center;
+
+
+	.login__app  {
+		margin: 15px auto;
 	}
+
 	.subscription {
 		height: auto;
 		padding: 52px 15px;
 		font-size: 16px;
 	}
+
 	.subscription-text {
 		margin-left: 350px;
 		margin-top: 0;
 	}
+
 	.subscription-price {
 		margin-left: 353px;
 		margin-top: 0;
 	}
+
 	.sub__price {
-		color: #689f38;
+	
 		font-size: 40px;
 		font-weight: bolder;
 	}
+
 	.form-subscription {
 		margin-left: 300px;
 	}
+
 	.btn-sub {
 		padding: 17px 74px;
 		margin-top: 50px;
 		position: relative;
 		top: 20px;
 	}
+
 	.about-section section {
 		margin: 10px auto;
 		padding: 0 10px;
 	}
+	
 	.partners {
 		margin: 0 335px;
 	}
 }
+
 @media screen and (max-width:576px) {
+
 	html, body {
 		/* Убирает прокрутку по горизонтале, для мобильной версии */
 		overflow-x: hidden;
 	}
+
+	h1,h2,h3 {
+		color: #959393;
+		margin-top: 40px;
+		font-weight: bold;
+		font-size: 20px;
+	}
+	
 	.login a {
-		width: 100%;
+	    width: 50%;
 		margin: 0 auto;
 		position: 0;
 		left: 0;
-		border-radius: 0;
+		border-radius: 6px;
 	}
 	.subscription {
-		padding: 48px 15px;
+		padding: 116px 0;
 	}
+
 	.subscription-text {
-		margin-left: 341px;
-		margin-top: 0;
 		font-size: 12px;
+		width: 360px;
+		margin-left: 0;
+		margin: 0px auto;
 	}
-	.btn-sub {
-		padding: 12px 15px;
-		margin-top: 10px;
-		font-size: 12px;
-		margin-left: 50px;
-	}
-	label {
-		color: #ff6d00;
+
+	.form-subscription {
 		margin-left: 0;
 	}
-	#select__rate {
-		min-width: 239px;
-		height: 44px;
+
+	.form-calc {
+		margin-top: 40px;
+	}
+
+	.btn-sub {
+		margin-top: 10px;
+		font-size: 16px;
+	}
+
+	.section__title {
+		font-size: 20px;
+		color: #959393;
+		margin: 0;
+		width: auto;
+	}
+	
+	.item {
+		width: 250px;
+		height: 165px;
+		background-color: #1359c8;
+		margin: 10px;
+	}
+
+	.section-about {
+		margin-top: 40px;
+	}
+
+	.form-calc{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.form-calc input , #select__rate {
+		font-size: 15px
 	}
 	.partners {
 		margin: 0px 254px;
 	}
 }
+
 @media screen and (max-width:414px) {
+
+	h1, h2, h3 {
+		margin-top: 30px;
+		font-size: 18px;
+   }
 	.subscription {
-		padding: 10px 10px;
-		height: 500px;
-	}
-	.subscription-title, .about-title, .calc-title {
-		font-size: 20px;
-		margin: 15px 0;
-	}
-	#select__rate {
-		border-radius: 6px;
-	}
+		padding:0;
+   }
 	.subscription-text {
-		margin-left: 212px;
-	}
-	.subscription-price {
-		margin-left: 218px;
-	}
+		margin: 115px auto 0;
+   }
 	.sub__price {
-		font-size: 25px;
-	}
-	.form-subscription {
-		margin-left: 219px;
-	}
-	.btn-sub {
-		margin-left: 0;
-	}
-	.about-text {
-		width: auto;
-	}
-	.partners {
-		margin: 0px 182px;
-	}
-}
-@media screen and (max-width:375px) {
-	.btn-sub {
-		padding: 12px 5px;
-		font-size: 10px;
-	}
-	.about-section section {
-		height: 272px;
-		margin: 10px auto;
-		padding: 0 10px;
-	}
-	.section__text {
-		color: #fa5255;
-		font-size: 14px;
-	}
+		font-size: 28px;
+		font-weight: bolder;
+		margin-top: 10px;
+   }
 	.section__title {
-		font-size: 25px;
-	}
-	.subscription-text {
-		font-size: 10px;
-	}
-	.calc form {
-		margin-left: 53px;
-	}
-	.partners {
-		margin: 0px 163px;
-	}
+		font-size: 18px;
+		color: #959393;
+		margin: 0;
+		width: auto;
+   }
+	.item {
+		width: 230px;
+		height: 160px;
+   }
+	.item__text {
+		font-size: 14px;
+		padding: 18px;
+   }
+	.item__number {
+		font-size: 23px;
+		margin: 0;
+		padding: 18px 0 0 18px;
+		color: #fff;
+   }
+	footer img {
+		width: 55px;
+		height: 15px;
+   }
+   
+
 }
-@media screen and (max-width:320px) {
-	.subscription-title, .about-title, .calc-title {
-		font-size: 15px;
+
+@media screen and (max-width:375px) {
+
+	h1, h2, h3 {
+		margin-top: 20px;
+		font-size: 16px;
 	}
-	.subscription {
-		padding: 10px 10px;
-		height: 350px;
-	}
+
 	.subscription-text {
-		font-size: 10px;
-		margin: 0 auto;
+		margin: 80px auto 0;
+		width: 300px;
 	}
-	.subscription-price {
-		margin: 0 70px;
-	}
-	.sub__price {
-		font-size: 24px;
-	}
-	.form-subscription {
-		margin: 0 70px;
-	}
-	.btn-sub {
-		padding: 15px 17px;
-		font-size: 10px;
-		margin-left: 16px;
-	}
-	.calc form {
-		margin-left: 25px;
-	}
-	.partners {
-		margin: 0px 136px;
-	}
+
+}
+
+@media screen and (max-width:320px) {
+
+	.subscription-text {
+		margin: 18px auto 0;
+		width: 190px;
+   }
+
+	.item {
+		width: 210px;
+		height: 150px;
+   }
+
+	.item__number {
+		font-size: 21px;
+		padding: 16px 0 0 18px;
+   }
+
+	.section__title {
+		font-size: 12px;
+   }
+
+
+	.item__text {
+		font-size: 14px;
+		padding: 16px;
+   }
+   
+
 }
